# faff-plugin-matrix-rust

./: .gitignore  Cargo.toml  README.md  config.template.toml
src/: main.rs
